Cambios de estructura y contenido al index
Agregado de carpeta media y nuevas estructuras en index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Primera Página</title>
+    <title>Aprendiendo Git/Github</title>
 </head>
+
 <body>
-    <h1>yaaay</h1>
+    <h1>Aprendiendo Git/Github</h1>
+    <p>Aprende aquí como utilizar estas herramientas de control de versiones</p>
+    <div>
+        <img src="media/git.png" alt="Logo Git">
+        <p>Git</p>
+        <a href="">Primeros Pasos</a>
+        <a href="">Conceptos básicos</a>
+        <a href="">Comandos básicos</a>
+    </div>
+    <div>
+        <img src="media/github.png" alt="Logo Github">
+        <p>Github</p>
+        <a href="">Primeros Pasos</a>
+        <a href="">Guía de uso</a>
+    </div>
+
 </body>
+
 </html>
